--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -26,8 +26,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 # set rdkit lib !!!!
-link_directories(/opt/anaconda3/envs/rdkit/lib)
-set(RDKIT_DIR "/opt/anaconda3/envs/rdkit/")
+link_directories(/opt/anaconda3/envs/ternify/lib)
+set(RDKIT_DIR "/opt/anaconda3/envs/ternify/")
 find_package(RDKit REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Threads REQUIRED)
@@ -85,6 +85,7 @@ target_link_libraries(ternify
         RDKitMolAlign
         RDKitPartialCharges
         RDKitRDGeometryLib
+        RDKitDistGeomHelpers
         Eigen3::Eigen
         Threads::Threads
 )
